@@ -14,7 +14,7 @@ Version 0.7.0
 - Fixed countless php warnings and notices meaning it should now be possible to run the bot with php E_ALL logging turned on to help ease debugging.
 - Added third optional parameter $header (bol TRUE/FALSE) to make_blob displaying VhaBot like terminal header. Shamelessly borrowed from VhaBot. Defaults to TRUE
 - Added fourth optional parameter $strip (bol TRUE/FALSE) to chatcmd to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
-- Added sixth optional parameter $strip (bol TRUE/FALSE) to make_item to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
+- Added fifth optional parameter $strip (bol TRUE/FALSE) to make_item to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
 - Bot now automatically uses curl() for fetching URL's if curl is detected. You can still force it to use Sockets using !settings tools force sockets on.
 - Bot now includes bot name and dimension in user agent on HTTP requests.
 - chatcmd() now allows / as $origin parameter and will not prefix the chatcmd in any way.
@@ -50,6 +50,10 @@ Version 0.6.4
 - Added more spam protection (e.g. when double clicking tell links) to message queue.
 - Added setting Members->QuietUpdate to let the bot do roster updates quietly (default off).
 - Added setting Shutdown->QuietShutdown to let the bot do restart and shutdown quietly (default off).
+
+API Changes:
+make_item no longer accepts the optional fifth argument. It will now properly deal with item names containing ' automatically.
+
 
 -------------
 Version 0.6.3
